Certificate update logic error fixing

--- a/qualification_hub/templates/certificates/certificate_detail.html
+++ b/qualification_hub/templates/certificates/certificate_detail.html
@@ -16,9 +16,7 @@
                 <strong>{% trans "Description" %}:</strong> {{ certificate.description }}
             </p>
             <p class="card-text">
-                <strong>{% trans "Expiration Date"
-                    
-                    %}:
+                <strong>{% trans "Expiration Date"%}:
                 </strong> {{ certificate.expiration_date }}
             </p>
             <p class="card-text">
