--- a/qualification_hub/templates/home.html
+++ b/qualification_hub/templates/home.html
@@ -55,7 +55,7 @@
           >
         </div>
 
-        <div class="lc-block">
+        {% comment %} <div class="lc-block">
           <div editable="rich">
             <p class="fw-bold">
               {% trans " Business collaboration based on trust" %}:
@@ -110,7 +110,7 @@
         </div>
       </div>
     </div>
-    <!-- /lc-block -->
+    <!-- /lc-block --> {% endcomment %}
   </div>
 </div>
 {% endblock content %}
