--- a/qualification_hub/templates/copy-right.html
+++ b/qualification_hub/templates/copy-right.html
@@ -17,7 +17,6 @@
         background-color: #343a40; /* Bootstrap dark theme */
         color: #f8f9fa; /* Light text for contrast */
       }
-
       /* Styling for code blocks */
       pre {
         background-color: #2d2d2d; /* Darker background for code */
@@ -32,7 +31,6 @@
         color: #007bff; /* Bootstrap primary color */
         text-decoration: none;
       }
-
       a:hover {
         text-decoration: underline;
       }
@@ -48,7 +46,6 @@
         managers, and administrators, allowing them to manage certificates and
         track qualifications.
       </p>
-
       <h2>Features</h2>
       <ul>
         <li>
@@ -67,7 +64,6 @@
           registration with appropriate permissions.
         </li>
       </ul>
-
       <h2>User Roles and Permissions</h2>
       <ul>
         <li>
@@ -85,7 +81,6 @@
           public information.
         </li>
       </ul>
-
       <h2>Visual representation of project</h2>
       <h4>Entity-Relationship Diagram</h4>
       <p>Below is the Entity-Relationship Diagram for the project:</p>
@@ -136,7 +131,6 @@
           <pre><code>Open a browser and go to http://127.0.0.1:8000/</code></pre>
         </li>
       </ol>
-
       <h2>Documentation</h2>
       <ul>
         <li>
@@ -152,31 +146,31 @@
           `Manager`, `Department`, and `Faculty`.
         </li>
       </ul>
-
-      <h3>User Guide</h3>
-      <a href="{% static 'docs/user-guide.md' %}">click to download</a>
-
+      <h5><a href="{% static 'docs/user-guide.md' %}">User Guide- click to download</a></h5>
+      <h5><a href="{% static 'docs/core-docs.md' %}">Core APP docs- click to download</a></h5>
+      <h5><a href="{% static 'docs/faculty-docs.md' %}">Faculties APP docs - click to download</a></h5>
+      <h5><a href="{% static 'docs/department-docs.md' %}">Departments APP docs- click to download</a></h5>
+      <h5><a href="{% static 'docs/manager-docs.md' %}">Managers APP docs- click to download</a></h5>
+      <h5><a href="{% static 'docs/teacher-docs.md' %}">Teachers APP docs- click to download</a></h5>
+      <h5><a href="{% static 'docs/student-docs.md' %}">Students APP docs- click to download</a></h5>
+      <h5><a href="{% static 'docs/certificate-docs.md' %}">Certificates APP docs- click to download</a></h5>
       <h2>Contributing</h2>
       <p>
         Contributions are welcome! Please create a pull request or open an issue
         if you find bugs or have suggestions for improvements.
       </p>
-
       <h2>License</h2>
       <p>
         This project is licensed under the
         <a href="https://opensource.org/licenses/MIT">MIT License</a>.
       </p>
-
       <h2>Contact</h2>
       <p>
         For further questions or support, contact kaiyrtaygabbassov@gmail.com.
       </p>
-
       <h2>Author</h2>
       <p>Created by Kaiyrtay.</p>
     </div>
-
     <!-- Include Bootstrap JS and Highlight.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
