Dark mode switch.

--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.8.1/css/flag-icon.min.css">
     <!-- Include Flatpickr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
+    <link rel="stylesheet" href="{% static 'css/dark-mode.css' %}">
   </head>
   <body>
     <!-- Navbar -->
@@ -43,5 +44,6 @@
     </script>
     <!-- Include Bootstrap JS and other scripts -->
     {% bootstrap_javascript %}
+    <script src="{% static 'js/dark-mode.js' %}"></script>
   </body>
 </html>
