Add video tag and editting README.md

--- a/qualification_hub/templates/copy-right.html
+++ b/qualification_hub/templates/copy-right.html
@@ -46,6 +46,11 @@
         managers, and administrators, allowing them to manage certificates and
         track qualifications.
       </p>
+      <h2>Screen capture:</h2>
+      <video width="700" height="300" controls>
+        <source src="{% static './docs/video/screen-capture.mp4'%}" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
       <h2>Features</h2>
       <ul>
         <li>
