--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -23,6 +23,7 @@
     <!-- Include Flatpickr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
     <link rel="stylesheet" href="{% static 'css/dark-mode.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon/favicon.ico' %}">
   </head>
   <body>
     <!-- Navbar -->
