--- a/qualification_hub/templates/nav-bar.html
+++ b/qualification_hub/templates/nav-bar.html
@@ -20,28 +20,43 @@
       <!-- Main Navigation Links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'faculties:list' %}">{% trans "Faculty" %}</a>
+          <a class="nav-link" href="{% url 'faculties:list' %}"
+            >{% trans "Faculty" %}</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'departments:list' %}">{% trans "Department" %}</a>
+          <a class="nav-link" href="{% url 'departments:list' %}"
+            >{% trans "Department" %}</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'managers:list' %}">{% trans "Managers" %}</a>
+          <a class="nav-link" href="{% url 'managers:list' %}"
+            >{% trans "Managers" %}</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'teachers:list' %}">{% trans "Teachers" %}</a>
+          <a class="nav-link" href="{% url 'teachers:list' %}"
+            >{% trans "Teachers" %}</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'students:list' %}">{% trans "Students" %}</a>
+          <a class="nav-link" href="{% url 'students:list' %}"
+            >{% trans "Students" %}</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'certificates:list' %}">{% trans "Certificates" %}</a>
+          <a class="nav-link" href="{% url 'certificates:list' %}"
+            >{% trans "Certificates" %}</a
+          >
         </li>
       </ul>
       <!-- Dark Mode Switch -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <div class="form-check form-switch pt-2" style="--bs-form-switch-width: 60px; --bs-form-switch-height: 24px;">
+          <div
+            class="form-check form-switch pt-2"
+            style="--bs-form-switch-width: 60px; --bs-form-switch-height: 24px"
+          >
             <input
               class="form-check-input"
               type="checkbox"
@@ -52,49 +67,70 @@
         </li>
         <!-- Language Dropdown -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarLanguageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarLanguageDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             <i class="fas fa-globe"></i> {% trans "Language" %}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarLanguageDropdown">
             {% get_current_language as CURRENT_LANGUAGE %} 
             {% get_available_languages as AVAILABLE_LANGUAGES %} 
-            {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+            {% get_language_info_list for AVAILABLE_LANGUAGES as languages %} 
             {% for language in languages %}
-              <li>
-                <form method="post" action="{% url 'set_language' %}">
-                  {% csrf_token %}
-                  <input type="hidden" name="language" value="{{ language.code }}">
-                  <input type="hidden" name="next" value="{{ request.path }}">
-                  <button type="submit" class="dropdown-item {% if language.code == CURRENT_LANGUAGE %} active {% endif %}">
-                    {{ language.name_translated }}
-                  </button>
-                </form>
-              </li>
+            <li>
+              <form method="post" action="{% url 'set_language' %}">
+                {% csrf_token %}
+                <input
+                  type="hidden"
+                  name="language"
+                  value="{{ language.code }}"
+                />
+                <input type="hidden" name="next" value="{{ request.path }}" />
+                <button
+                  type="submit"
+                  class="dropdown-item {% if language.code == CURRENT_LANGUAGE %} active {% endif %}"
+                >
+                  {{ language.name_translated }}
+                </button>
+              </form>
+            </li>
             {% endfor %}
           </ul>
         </li>
         <!-- User Authentication Links -->
-        {% if user.is_authenticated %}
-          {% if user.is_staff %}
-            <li class="nav-item">
-              <a class="nav-link" href="/rosetta">Rosetta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin">{% trans "Hello" %}, {{ user.username }}!</a>
-            </li>
-          {% else %}
-            <span class="nav-link">{% trans "Hello" %}, {{ user.username }}!</span>
-          {% endif %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:logout' %}">{% trans "Logout" %}</a>
-          </li>
+        {% if user.is_authenticated %} {% if user.is_staff %}
+        <li class="nav-item">
+          <a class="nav-link" href="/rosetta">Rosetta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin"
+            >{% trans "Hello" %}, {{ user.username }}!</a
+          >
+        </li>
         {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:register' %}">{% trans "Sign Up" %}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:login' %}">{% trans "Sign In" %}</a>
-          </li>
+        <span class="nav-link">{% trans "Hello" %}, {{ user.username }}!</span>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'core:logout' %}"
+            >{% trans "Logout" %}</a
+          >
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'core:register' %}"
+            >{% trans "Sign Up" %}</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'core:login' %}"
+            >{% trans "Sign In" %}</a
+          >
+        </li>
         {% endif %}
       </ul>
     </div>
